--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "concurrently": "^3.5.0",
     "nodemon": "^1.11.0"
   },
