--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-sequelize": "^0.8.0",
+    "react": "^16.4.1",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.4.1",
     "sequelize": "^4.38.0"
   }
 }
