--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Inn0cent",
+    "password": "mysql2018",
     "database": "animalSan_db",
     "host": "127.0.0.1",
     "dialect": "mysql",
@@ -9,16 +9,13 @@
   },
   "test": {
     "username": "root",
-    "password": "Inn0cent",
+    "password": "mysql2018",
     "database": "animalSan_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": "Inn0cent",
-    "database": "animalSan_db",
-    "host": "127.0.0.1",
+    "use_env_variable": "JAWSDB_URL",
     "dialect": "mysql"
   }
 }
