--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "client": "cd client && npm run start"
+    "client": "cd client && npm run start",
+    "build": "cd client && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -32,6 +33,7 @@
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
+    "react-responsive": "^5.0.0",
     "sequelize": "^4.38.0",
     "yarn": "^1.7.0"
   }
