--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.1.2",
     "dotenv": "^6.0.0",
     "express": "^4.15.4",
     "express-session": "^1.15.6",
     "express-sessions": "^1.0.6",
+    "history": "^4.7.2",
     "if-env": "^1.0.4",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
