--- a/package.json
+++ b/package.json
@@ -13,28 +13,29 @@
   "license": "ISC",
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "concurrently": "^3.5.0",
-    "nodemon": "^1.11.0"
+    "concurrently": "^3.6.1",
+    "nodemon": "^1.19.0"
   },
   "dependencies": {
-    "bcrypt-nodejs": "^0.0.3",
-    "body-parser": "^1.18.2",
-    "bootstrap": "^4.1.2",
-    "dotenv": "^6.0.0",
-    "express": "^4.15.4",
-    "express-session": "^1.15.6",
-    "express-sessions": "^1.0.6",
-    "history": "^4.7.2",
-    "if-env": "^1.0.4",
-    "mysql": "^2.15.0",
-    "mysql2": "^1.5.3",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "passport-local-sequelize": "^0.8.0",
-    "react": "^16.4.1",
-    "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.4.1",
-    "sequelize": "^4.38.0",
-    "yarn": "^1.7.0"
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "1.18.2",
+    "bootstrap": "4.3.1",
+    "dotenv": "6.0.0",
+    "express": "^4.17.0",
+    "express-session": "1.15.6",
+    "express-sessions": "1.0.6",
+    "history": "4.7.2",
+    "if-env": "1.0.4",
+    "jquery": "^3.4.1",
+    "mysql": "2.15.0",
+    "mysql2": "1.5.3",
+    "passport": "0.4.0",
+    "passport-local": "1.0.0",
+    "passport-local-sequelize": "0.8.0",
+    "react": "16.4.1",
+    "react-bootstrap": "0.32.1",
+    "react-dom": "16.4.1",
+    "sequelize": "4.38.0",
+    "yarn": "1.7.0"
   }
 }
