--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "4.3.1",
-    "react-scripts": "1.0.14"
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
