--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
     "concurrently": "^3.6.1",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.1"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "1.18.2",
     "bootstrap": "4.3.1",
     "dotenv": "6.0.0",
-    "express": "^4.17.0",
+    "express": "^4.17.1",
     "express-session": "1.15.6",
     "express-sessions": "1.0.6",
     "history": "4.7.2",
@@ -32,6 +32,7 @@
     "passport": "0.4.0",
     "passport-local": "1.0.0",
     "passport-local-sequelize": "0.8.0",
+    "popper.js": "^1.15.0",
     "react": "16.4.1",
     "react-bootstrap": "0.32.1",
     "react-dom": "16.4.1",
