--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "16.4.1",
     "react-bootstrap": "0.32.1",
     "react-dom": "16.4.1",
+    "react-scripts": "^3.0.1",
     "sequelize": "4.38.0",
     "yarn": "1.7.0"
   }
