--- a/package.json
+++ b/package.json
@@ -18,12 +18,11 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "bcrypt-nodejs": "^0.0.3",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
-    "dotenv": "^6.0.0",
+    "dotenv": "^6.2.0",
     "express": "^4.15.4",
     "express-session": "^1.16.1",
-    "express-sessions": "^1.0.6",
     "if-env": "^1.0.4",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
