--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.1",
     "react-responsive": "^5.0.0",
+    "react-scripts": "^3.0.1",
     "sequelize": "^5.8.6",
     "yarn": "^1.7.0"
   }
