--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.2",
     "dotenv": "^6.2.0",
