--- a/package.json
+++ b/package.json
@@ -19,27 +19,25 @@
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
     "concurrently": "^3.6.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "nodemon": "^1.19.1"
   },
   "dependencies": {
-    "axios": "^0.18.0",
     "bcrypt-nodejs": "^0.0.3",
-    "body-parser": "^1.18.2",
-    "dotenv": "^6.2.0",
-    "express": "^4.15.4",
-    "express-session": "^1.16.1",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "if-env": "^1.0.4",
-    "mysql": "^2.15.0",
+    "mysql": "^2.17.1",
     "mysql2": "^1.5.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "react": "^16.4.1",
-    "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.4.1",
-    "react-responsive": "^5.0.0",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "^3.0.1",
-    "sequelize": "^5.8.6",
-    "yarn": "^1.7.0"
+    "sequelize": "^5.8.9",
+    "yarn": "^1.16.0"
   }
 }
