--- a/client/package.json
+++ b/client/package.json
@@ -63,8 +63,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom",
-    "precommit": "NODE_ENV=production lint-staged"
+    "test": "node scripts/test.js --env=jsdom"
   },
   "browserslist": [
     ">0.2%",
@@ -137,12 +136,5 @@
     "lint-staged": "^8.2.1",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1"
-  },
-  "lint-staged": {
-    "*.{js,jsx}": [
-      "pretty-quick --staged",
-      "eslint src/ --fix",
-      "git add"
-    ]
   }
 }
