--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Mern Demo",
   "main": "server.js",
   "engines": {
-    "node": "11.6.0",
-    "npm": "6.x"
+    "node": "12.2.0",
+    "npm": "6.9.0"
   },
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
