--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mysql2": "^1.5.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "react-scripts": "^3.0.1",
     "sequelize": "^5.8.9",
     "yarn": "^1.16.0"
   }
