--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "concurrently": "^3.6.1",
+    "concurrently": "^4.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.17.3",
@@ -37,8 +37,15 @@
     "mysql2": "^1.5.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "react-scripts": "^3.0.1",
-    "sequelize": "^5.8.9",
-    "yarn": "^1.16.0"
+    "sequelize": "^5.8.11",
+    "yarn": "^1.16.0",
+    "axios": "^0.19.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
+    "react-dom": "^16.8.6",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1"
   }
 }
