--- a/client/package.json
+++ b/client/package.json
@@ -33,5 +33,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^8.0.4",
+    "jest-dom": "^4.0.0",
+    "jest-fetch-mock": "^2.1.2"
   }
 }
